--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookStore_New2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -11,5 +11,14 @@
   },
   "AllowedHosts": "*",
   "SendGridKey": "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",
-  "SendGridUser": "BookStore"
+  "SendGridUser": "BookStore",
+  "Stripe": {
+    "PublishableKey": "pk_test_kObF1wOAtxMw1xruY89Kp4ks00HwQXvx43",
+    "SecretKey": "sk_test_uDkUU81aUcXJtAjsbj7GlO1U00cZxxGSJI"
+  },
+  "Twilio": {
+    "PhoneNumber": "+15108519099",
+    "AuthToken": "f0c01502267f02e619d007775801d6a1",
+    "AccountSid": "AC37fddca0b6033756003f1f3070b635e6"
+  }
 }
